@@ -10,7 +10,6 @@ import java.time.LocalDate;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Getter
@@ -29,6 +28,6 @@ public class EventTemplateData {
                      EventTemplateData.builder()
                          .date(event.getValue().getTimelineDate())
                          .explanation(event.getValue().getTimelineDescription())
-                         .build()).collect(Collectors.toList());
+                         .build()).toList();
     }
 }
