@@ -6,8 +6,8 @@ import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.defaultjudgment.CaseLocationCivil;
-import uk.gov.hmcts.reform.civil.referencedata.LocationRefDataService;
 import uk.gov.hmcts.reform.civil.referencedata.model.LocationRefData;
+import uk.gov.hmcts.reform.civil.service.referencedata.LocationReferenceDataService;
 
 import java.util.List;
 import java.util.Optional;
@@ -18,7 +18,7 @@ import java.util.stream.Collectors;
 @Slf4j
 public class DocumentHearingLocationHelper {
 
-    private final LocationRefDataService locationRefDataService;
+    private final LocationReferenceDataService locationRefDataService;
 
     public LocationRefData getHearingLocation(String valueFromForm, CaseData caseData, String authorisation) {
         if (StringUtils.isNotBlank(valueFromForm)) {
@@ -33,7 +33,7 @@ public class DocumentHearingLocationHelper {
             }
         }
 
-        LocationRefData locationRefData = Optional.ofNullable(caseData.getCaseManagementLocation())
+        return Optional.ofNullable(caseData.getCaseManagementLocation())
             .map(CaseLocationCivil::getBaseLocation)
             .map(baseLocation -> {
                 List<LocationRefData> sameLocation = locationRefDataService.getCourtLocationsByEpimmsIdAndCourtType(
@@ -42,24 +42,23 @@ public class DocumentHearingLocationHelper {
                 ).stream().filter(location -> StringUtils.equals(
                     location.getRegionId(),
                     caseData.getCaseManagementLocation().getRegion()
-                )).collect(Collectors.toList());
+                )).toList();
                 if (sameLocation.isEmpty()) {
                     return null;
                 } else if (sameLocation.size() == 1) {
                     log.info("Claim " + caseData.getLegacyCaseReference()
-                                 + " found one matching location: " + LocationRefDataService.getDisplayEntry(
+                                 + " found one matching location: " + LocationReferenceDataService.getDisplayEntry(
                         sameLocation.get(0)));
                     return sameLocation.get(0);
                 } else {
                     log.info("Claim " + caseData.getLegacyCaseReference() +
                                  "found " + sameLocation.size() + " locations with same epimmsId and region "
                                  + baseLocation + "/" + caseData.getCaseManagementLocation().getRegion()
-                                 + ": " + sameLocation.stream().map(LocationRefDataService::getDisplayEntry)
+                                 + ": " + sameLocation.stream().map(LocationReferenceDataService::getDisplayEntry)
                         .collect(Collectors.joining(", ")));
                     return sameLocation.get(0);
                 }
             }).orElse(null);
-        return locationRefData;
     }
 
 }
